force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/ChargeOver_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Invoice Line Item</label>
    <nameField>
        <label>ChargeOver Invoice Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Invoice Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>