force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Active_Commission_Earner__c.field-meta.xml
<CustomField>
    <fullName>Active_Commission_Earner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Commission Earner</label>
    <type>Checkbox</type>
</CustomField>