force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/ASL_Renewal_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ASL_Renewal_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will trigger a manual run of the ASL Renewal code</description>
    <inlineHelpText>Checking this box will trigger a manual run of the ASL Renewal code</inlineHelpText>
    <label>ASL Renewal Trigger</label>
    <type>Checkbox</type>
</CustomField>