force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/At_Risk_Balance_Formula__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Balance_Formula__c</fullName>
    <description>The potential revenue that is at-risk due to the client&apos;s past due invoice.</description>
    <formula>IF(
AND(
ISPICKVAL( ChargeOver_Subscription_Line_Item__r.Status__c , &quot;Active&quot;),
ChargeOver_Invoice_Status__c = &quot;Overdue&quot;),
( Total__c - Total_Paid_Amount__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The potential revenue that is at-risk due to the client&apos;s past due invoice.</inlineHelpText>
    <label>At-Risk Balance (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>