force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/ChargeOver_Invoice_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Invoice_Line_Status__c</fullName>
    <description>The Status of the parent Invoice. This is a picklist field rather than the formula field</description>
    <label>ChargeOver Invoice Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>