force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/ChargeOver_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Invoice_Status__c</fullName>
    <description>The status of the Invoice Line&apos;s parent Invoice</description>
    <formula>TEXT( ChargeOver_Invoice__r.ChargeOver_Invoice_Status__c )</formula>
    <label>ChargeOver Invoice Status</label>
    <type>Text</type>
</CustomField>