force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/ChargeOver_Subscription_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Subscription_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Subscription Line Item</label>
    <referenceTo>ChargeOver_Subscription_Line_Item__c</referenceTo>
    <relationshipLabel>ChargeOver Invoice Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>