force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Commission_Earner__c.field-meta.xml
<CustomField>
    <fullName>Commission_Earner__c</fullName>
    <label>Commission Earner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>