force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Commissionable__c.field-meta.xml
<CustomField>
    <fullName>Commissionable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissionable?</label>
    <type>Checkbox</type>
</CustomField>