force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The Due Date for the parent ChargeOver Invoice</description>
    <formula>TEXT( ChargeOver_Invoice__r.Due_Date__c )</formula>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>