force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Email_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_ID__c</fullName>
    <formula>Account__r.Email_Campaign_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Campaign ID</label>
    <type>Text</type>
</CustomField>