force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Expected_Future_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Future_Revenue__c</fullName>
    <description>The potential revenue that is at-risk due to the client&apos;s past due invoice line.</description>
    <inlineHelpText>The potential revenue that is at-risk due to the client&apos;s past due invoice line.</inlineHelpText>
    <label>Expected Future Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>