force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Expected_Future_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expected_Future_Revenue_Formula__c</fullName>
    <description>The total amount of expected future revenue for this invoice.</description>
    <formula>IF(
AND(
ISPICKVAL( ChargeOver_Subscription_Line_Item__r.Status__c , &quot;Active&quot;),
ChargeOver_Invoice_Status__c = &quot;Unpaid&quot;),
( Total__c - Total_Paid_Amount__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of expected future revenue for this invoice.</inlineHelpText>
    <label>Expected Future Revenue (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>