force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/First_Obligation_ID__c.field-meta.xml
<CustomField>
    <fullName>First_Obligation_ID__c</fullName>
    <label>First Obligation ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>