force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/From_Zuora__c.field-meta.xml
<CustomField>
    <fullName>From_Zuora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Zuora?</label>
    <type>Checkbox</type>
</CustomField>