force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/FullID__c.field-meta.xml
<CustomField>
    <fullName>FullID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullID</label>
    <type>Text</type>
</CustomField>