force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Historical_Update__c.field-meta.xml
<CustomField>
    <fullName>Historical_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox used to trigger updates to the record. Used for flows and apex to allow you to make batch or record updates.</description>
    <label>Historical Update</label>
    <type>Checkbox</type>
</CustomField>