force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Is_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Is_Obligation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Obligation</label>
    <type>Checkbox</type>
</CustomField>