force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Is_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Is_Setup_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Setup Fee</label>
    <type>Checkbox</type>
</CustomField>