force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Lead_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_New__c</fullName>
    <formula>Account__r.Lead_Type_New_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type New</label>
    <type>Text</type>
</CustomField>