force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Lost_Future_Revenue_Due_to_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Lost_Future_Revenue_Due_to_Cancellation__c</fullName>
    <description>The total amount of potential revenue lost due to the client cancelling their subscription</description>
    <inlineHelpText>The total amount of potential revenue lost due to the client cancelling their subscription</inlineHelpText>
    <label>Lost Future Revenue Due to Cancellation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>