force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Lost_Revenue_Due_to_Cancellation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lost_Revenue_Due_to_Cancellation_Formula__c</fullName>
    <description>The total amount of potential revenue lost due to the client cancelling their subscription</description>
    <formula>IF(
OR(
ISPICKVAL( ChargeOver_Subscription_Line_Item__r.Status__c , &quot;Cancelled&quot;),
ISPICKVAL( ChargeOver_Subscription_Line_Item__r.Status__c , &quot;Active - Pending Cancel&quot;)
),
( Total__c - Net_Paid_Amount_Formula__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of potential revenue lost due to the client cancelling their subscription</inlineHelpText>
    <label>Lost Revenue Due to Cancellation (Formul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>