force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Net_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Paid_Amount__c</fullName>
    <description>The Sum of Total Paid Amount minus Total Refund Amount for this invoice line</description>
    <inlineHelpText>The Sum of Total Paid Amount minus Total Refund Amount for this invoice line</inlineHelpText>
    <label>Net Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>