force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Net_Paid_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Paid_Amount_Formula__c</fullName>
    <description>The Sum of Total Paid Amount minus Total Refund Amount</description>
    <formula>Total_Paid_Amount__c + Total_Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Paid Amount (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>