force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Net_Paid_Amount_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Paid_Amount_Last_180_Days__c</fullName>
    <description>The Sum of Total Paid Amount minus Total Refund Amount for this invoice line over the last 180 Days</description>
    <inlineHelpText>The Sum of Total Paid Amount minus Total Refund Amount for this invoice line over the last 180 Days</inlineHelpText>
    <label>Net Paid Amount - Last 180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>