force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Number_of_Recurs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Recurs__c</fullName>
    <label># of times this has recurred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>