force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/of_Payroll_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Payroll_Employees__c</fullName>
    <description>The number of employees entered into the pricing calculator for payroll</description>
    <label># of Payroll Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>