force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ChargeOver Invoice Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>