force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Financing</fullName>
            </value>
            <value>
                <fullName>2 Pay</fullName>
            </value>
            <value>
                <fullName>3 Pay</fullName>
            </value>
            <value>
                <fullName>4 Pay</fullName>
            </value>
            <value>
                <fullName>6 Pay</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>