force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <description>The total amount of successful refund transactions that have been applied to this subscription line</description>
    <label>Total Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>