force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Total_Refund_Amount_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount_Last_180_Days__c</fullName>
    <description>The total amount refunded to this invoice line over the last 180 days.</description>
    <label>Total Refund Amount - Last 180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>