force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Write_Off_Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Paid_Percentage__c</fullName>
    <description>Amount of the Invoice Line&apos;s related Transactions that were paid by Write-off versus an actual payment</description>
    <formula>Write_Off_Paid_Amount__c /  Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write-Off Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>