force-app/main/default/objects/ChargeOver_Invoice_Line_Item__c/fields/Zuora_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Transaction_Type__c</fullName>
    <label>Zuora Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>